<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewsFeed</string>
    <string name="actionbar_search">搜索</string>
    <string name="actionbar_login">登录</string>
    <string name="actionbar_dingzhi">定制</string>
    <string name="news_top_left_text">新闻</string>
    <string name="querentuichu">确认退出吗?</string>
    <string name="str_tuichu">退出</string>
    <string name="str_quxiao">清除输入</string>
    <string name="biaoti_zuijinxinwen">最近新闻</string>
    <string name="biaoti_quanwen">全文检索</string>
    <string name="biaoti_redian">热点</string>
    <string name="biaoti_denglu">登录</string>
    <string name="search_hint">搜索关键词</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loadmore">加载更多</string>
    <string name="contentDes">img_contentDes</string>
    <string name="zhuanti_name">专题名字</string>
    <string name="zhuanti_keywords">专题关键字</string>
    <string name="news_title">新闻标题</string>
    <string name="news_desc">新闻描述</string>
    <string name="from">来源</string>
    <string name="media">媒体</string>
    <string name="time">时间</string>
    <string name="zhuanti">专题</string>
    <string name="actionbar_new_text">新闻正文</string>
    <string name="title_search_result">搜索结果</string>
    <string name="title_search_advanced">高级检索</string>
    <string name="search">检索</string>
    <string name="user_login">用户登录</string>
    <string name="password">密码</string>
    <string name="login_user_hint">用户名或Email</string>
    <string name="title_activity_fragment">FragmentMain</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_search">搜索</string>
    <string name="menu_social_share">分享</string>
    <string name="authority">cn.edu.blcu.contentprovider.SearchSuggestion</string>
    <string name="title_activity_main_fragment">NewsFeed</string>
    <string-array name="sliding_menu">
        <item >最近新闻</item>
        <item >热点新闻</item>
        <item >搜索</item>
        <item >登录</item>
    </string-array>

</resources>