<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/list_item_background"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/contentDes"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/textView_ItemTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textIsSelectable="false"
            android:layout_below="@+id/imageView_icon"
            android:textColor="@color/textView_color" />

        <TextView
            android:id="@+id/textView_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textIsSelectable="false"
            android:layout_toRightOf="@+id/imageView_icon"
            android:textColor="@color/textView_color" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/news_title"
            android:textColor="@color/textView_color"
            android:textSize="17sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/ItemDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="left"
            android:text="@string/news_desc"
            android:textColor="@color/textView_color"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>